# health_insaurance_predcitor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: 01. premium_prediction.ipynb  02. data_segmentation.ipynb  03. premium_rest.ipynb  04. premium_young.ipynb  05. premium_young_with_gr.ipynb  06. premium_rest_with_gr.ipynb  1.ml_utils.ipynb  2.ml_utils_rest.ipynb  3.ml_utils_young.ipynb  4.ml_utils_young_with_gr.ipynb  5.ml_utils_rest_with_gr.ipynb  data_segmentation.ipynb
